recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:4: error: not found: value nbPas
	spiral(nbPas:Int, angle:Int, longueur:Int, increment:Int)
               ^