recursion.lessons.recursion.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    
{
	spiral(nbPas:Int, angle:Int, longueur:Int, increment:Int)
	{
		avance(longueur)
		gauche(angle)
		spiral(nbPas-1, angle, longueur+increment, increment)
	}

	spiral(5, 90, 0, 3)
}
